--- a/index.html
+++ b/index.html
@@ -29,8 +29,19 @@
   </section>
 
   <main>
-    <div id="timetable-container" class="grid"></div>
+  <div id="timetable-container" class="grid"></div>
+
+  <section id="heap-section" class="heap-graph">
+    <h2>📆 Upcoming Deadlines (Min Heap)</h2>
+    <ul id="heap-list"></ul>
+  </section>
+
+  <section id="graph-section" class="heap-graph">
+    <h2>🧩 Task Dependencies (Graph)</h2>
+    <div id="graph-container"></div>
+  </section>
   </main>
+
 
   <footer>
     <p>Made with ❤️ by <strong>Divyam Madan</strong></p>
